--- a/grp1.html
+++ b/grp1.html
@@ -13,7 +13,7 @@
 </head>
 <body>
  
-      <nav class="navbar navbar-dark bg-dark" id="navbar">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="navbar">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Accueil</a>
