--- a/grp2.html
+++ b/grp2.html
@@ -19,32 +19,32 @@
 <section class="container" id="intro">
  <div class="row justify-content-md-center textintro">
      <div class="lead col-10 text-muted">
-       <p> A 23 ans, Kalash Criminel est un artiste comblé. Ce vendredi 23 novembre, il sort son premier album, “La Fosse aux Lions”, et s’offre un coup de projecteur digne des meilleures campagnes de publicité: une polémique présidentielle. Car l’Elysée aurait fait retirer un titre du disque, intitulé Cougar Gang, dans lequel le rappeur affirme n’être “bon qu’à niquer des mères comme Macron”. L’entourage du Président a donc décroché son téléphone pour demander à Universal de supprimer le morceau de l’album, ce que le label s’est empressé de faire (sans l’autorisation du rappeur). 
+       <p> A 23 ans, Kalash Criminel est un artiste comblé. Ce vendredi 23 novembre, il sort son premier album,<i>“La Fosse aux Lions”<i/>, et s’offre un coup de projecteur digne des meilleures campagnes de publicité: une polémique présidentielle. Car l’Elysée aurait fait retirer un titre du disque, intitulé <i>Cougar Gang<i/>, dans lequel le rappeur affirme n’être <i>“bon qu’à niquer des mères comme Macron”<i/>. L’entourage du Président a donc décroché son téléphone pour demander à Universal de supprimer le morceau de l’album, ce que le label s’est empressé de faire (sans l’autorisation du rappeur). 
  </p>
      </div>
  </div>
  <div class="row justify-content-md-center textintro">
    <div class="lead col-10 text-muted">
-     <p>Comme Kalash, ils sont nombreux dans le rap à “niquer”. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression “niquer” (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur L.I.M arrive en tête du classement avec une moyenne de 45,07 fois l’expression “nique” dans sa discographie. 
+     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”<i/>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression “niquer” (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur L.I.M arrive en tête du classement avec une moyenne de 45,07 fois l’expression “nique” dans sa discographie. 
 </p>
 <div class="flourish-embed" data-src="visualisation/166517"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
    </div>
     <div class="lead col-10 text-muted">
 <h2 class="ca-heading-sub title"><bold>Des mères…. mais pas que</bold></h2>
-     <p> Et devinez ce que niquent nos esthètes? Des mères, des mères, et encore des mères, à l’image de Kalash Criminel: 682 fois selon nos calculs ce qui représente un quart ! Fait étonnant, le groupe NTM (Nique Ta Mère) n’est pas celui qui nique le plus des mères. Pour harmoniser notre base de données, nous avons réuni dans le groupe lexical “mère” des synonymes en argot comme “reum”, “reu-mè”. </p>
+     <p> Et devinez ce que niquent nos esthètes? Des mères, des mères, et encore des mères, à l’image de Kalash Criminel: 682 fois selon nos calculs ce qui représente un quart ! Fait étonnant, le groupe NTM (Nique Ta Mère) n’est pas celui qui nique le plus des mères. Pour harmoniser notre base de données, nous avons réuni dans le groupe lexical <i>“mère”<i/> des synonymes en argot comme <i>“reum”<i/>, <i>“reu-mè”<i/>. </p>
    </div>
 </div>
  </section>
 <section class="container" id="fallref">
    <div class="row justify-content-md-center textintro">
        <div class="lead col-10 text-muted">
-         <p>Vient ensuite le mot “tout” (185 occurrences). Dans les années 90, le crew marseillais Fonky Family se faisait déjà surnommer Section Nique Tout. Il arrive en deuxième position du classement des “top niqueurs”, juste derrière L.I.M, dont le poulain, Mister You, se classe à la troisième marche de notre podium des top “niqueurs”. 
+         <p>Vient ensuite le mot “tout” (185 occurrences). Dans les années 90, le crew marseillais Fonky Family se faisait déjà surnommer Section Nique Tout. Il arrive en deuxième position du classement des <i>“top niqueurs”<i/>, juste derrière L.I.M, dont le poulain, Mister You, se classe à la troisième marche de notre podium des top <i>“niqueurs”<i/>. 
  </p>
        </div>
        <div class="lead col-10 text-muted">
          <p>La police (109 fois) arrive en troisième position de notre podium, suivie par la race (85 fois), les grands-mères (31), les putes (29), l’Etat (27), les pères (23) et la France (20 fois).</p></div>
       <div class="lead col-10 text-muted">
-         <p>La famille est une source d’inspiration pour de nombreux rappeurs. Outre les mères qui occupent la première position du classement, les musiciens « niquent » les grand-mères (31 occurrences), les pères (24) et les sœurs (8). D’autres proches comme tantes (7), grand-pères (2), cousines (2) et oncles (1) ne sont pas épargnés non plus.
+         <p>La famille est une source d’inspiration pour de nombreux rappeurs. Outre les mères qui occupent la première position du classement, les musiciens <i>« niquent »<i/> les grand-mères (31 occurrences), les pères (24) et les sœurs (8). D’autres proches comme tantes (7), grand-pères (2), cousines (2) et oncles (1) ne sont pas épargnés non plus.
 </p>
 
 <div class="flourish-embed" data-src="visualisation/166516"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
@@ -53,12 +53,12 @@
 
 <h2 class="ca-heading-sub title"><bold>Institutions bafouées</bold></h2>
 
-         <p>Le hip-hop se distingue par une forte défiance envers les institutions. Les relations entre le rap français et les forces de l’ordre sont traditionnellement négatives ce qui s’exprime dans les paroles de rap. Dans notre base de données la police est “niquée” 109 fois. La justice et son vaste champ lexical (juge, procureur, code pénal, loi) occupent la deuxième place du classement des institutions “niquées” (55 occurrences). Ensuite on retrouve l'État et les mots du même champ lexical (fisc, gouvernement), mentionnés 40 fois. Parmi d’autres institutions, la France (20), la fac (11), le maire (8), la CSA (4), la politique (8), les médias (3), les patrons (3), la CAF (2), le Pôle Emploi (2) et l’UE (2).</p>
+         <p>Le hip-hop se distingue par une forte défiance envers les institutions. Les relations entre le rap français et les forces de l’ordre sont traditionnellement négatives ce qui s’exprime dans les paroles de rap. Dans notre base de données la police est <i>“niquée”<i/> 109 fois. La justice et son vaste champ lexical (juge, procureur, code pénal, loi) occupent la deuxième place du classement des institutions <i>“niquées”<i/> (55 occurrences). Ensuite on retrouve l'État et les mots du même champ lexical (fisc, gouvernement), mentionnés 40 fois. Parmi d’autres institutions, la France (20), la fac (11), le maire (8), la CSA (4), la politique (8), les médias (3), les patrons (3), la CAF (2), le Pôle Emploi (2) et l’UE (2).</p>
 
 <div class="flourish-embed" data-src="visualisation/166559"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 </div>
       <div class="lead col-10 text-muted">
-         <p>Hors-catégorie, nous avons également sélectionné les expressions les plus inventives des MCs locaux. Mention spéciale à Rohff, pour son très créatif et néanmoins raciste “nique les harkis mangeurs de pâtes aux lardons”. Nous félicitons également le groupe 1995 qui s’en prend lui aux “michtos assumées parfumées au liquide vaisselle”. Seth Gueko, lui, combine rejet des institutions et imagination puisqu’il “nique la France avec un sac Leclerc”... 
+         <p>Hors-catégorie, nous avons également sélectionné les expressions les plus inventives des MCs locaux. Mention spéciale à Rohff, pour son très créatif et néanmoins raciste <i>“nique les harkis mangeurs de pâtes aux lardons”<i/>. Nous félicitons également le groupe 1995 qui s’en prend lui aux <i>“michtos assumées parfumées au liquide vaisselle”<i/>. Seth Gueko, lui, combine rejet des institutions et imagination puisqu’il <i>“nique la France avec un sac Leclerc”<i/> 
 </p>
          <p></p>
        </div>
