--- a/grp2.html
+++ b/grp2.html
@@ -19,13 +19,13 @@
 <section class="container" id="intro">
  <div class="row justify-content-md-center textintro">
      <div class="lead col-10 text-muted">
-       <p> A 23 ans, Kalash Criminel est un artiste comblé. Ce vendredi 23 novembre, il sort son premier album,<i>“La Fosse aux Lions”</i>, et s’offre un coup de projecteur digne des meilleures campagnes de publicité: une polémique présidentielle. Car l’Elysée aurait fait retirer un titre du disque, intitulé <i>Cougar Gang</i>, dans lequel le rappeur affirme n’être <i>“bon qu’à niquer des mères comme Macron”</i>. L’entourage du Président a donc décroché son téléphone pour demander à Universal de supprimer le morceau de l’album, ce que le label s’est empressé de faire (sans l’autorisation du rappeur). 
+       <p> A 23 ans, Kalash Criminel est un artiste comblé. Ce vendredi 23 novembre, il sort son premier album,<i>“La Fosse aux Lions”</i>, et s’offre un coup de projecteur digne des meilleures campagnes de publicité: une polémique présidentielle. Car <a href="http://www.leparisien.fr/seine-saint-denis-93/sevran-kalash-criminel-un-premier-album-et-une-polemique-presidentielle-19-11-2018-7946697.php">l’Elysée aurait fait retirer un titre du disque, intitulé <i>Cougar Gang</i></a>, dans lequel le rappeur affirme n’être <i>“bon qu’à niquer des mères comme Macron”</i>. L’entourage du Président a donc décroché son téléphone pour demander à Universal de supprimer le morceau de l’album, ce que le label s’est empressé de faire (sans l’autorisation du rappeur). 
  </p>
      </div>
  </div>
  <div class="row justify-content-md-center textintro">
    <div class="lead col-10 text-muted">
-     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”</i>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression “niquer” (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur L.I.M arrive en tête du classement avec une moyenne de 45,07 fois l’expression “nique” dans sa discographie. 
+     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”</i>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression <i>“niquer”</i> (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur L.I.M arrive en tête du classement avec une moyenne de 45,07 fois l’expression “nique” dans sa discographie. 
 </p>
 <div class="flourish-embed" data-src="visualisation/166517"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
    </div>
