--- a/grp2.html
+++ b/grp2.html
@@ -25,7 +25,7 @@
  </div>
  <div class="row justify-content-md-center textintro">
    <div class="lead col-10 text-muted">
-     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”</i>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression <i>“niquer”</i> (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur L.I.M arrive en tête du classement avec une moyenne de 45,07 fois l’expression “nique” dans sa discographie. 
+     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”</i>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression <i>“niquer”</i> (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur <a href="https://www.youtube.com/watch?v=2DEg5Bn0hUs">L.I.M</a> arrive en tête du classement avec une moyenne de 45,07 fois l’expression “nique” dans sa discographie. 
 </p>
 <div class="flourish-embed" data-src="visualisation/166517"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
    </div>
