--- a/grp2.html
+++ b/grp2.html
@@ -38,7 +38,7 @@
 <section class="container" id="fallref">
    <div class="row justify-content-md-center textintro">
        <div class="lead col-10 text-muted">
-         <p>Vient ensuite le mot “tout” (185 occurrences). Dans les années 90, le crew marseillais Fonky Family se faisait déjà surnommer Section Nique Tout. Il arrive en deuxième position du classement des <i>“top niqueurs”</i>, juste derrière L.I.M, dont le poulain, Mister You, se classe à la troisième marche de notre podium des top <i>“niqueurs”</i>. 
+         <p>Vient ensuite le mot “tout” (185 occurrences). Dans les années 90, le crew marseillais Fonky Family se faisait déjà surnommer <a href"https://www.youtube.com/watch?v=6PTlZ4IVTKA">Section Nique Tout</a>. Il arrive en deuxième position du classement des <i>“top niqueurs”</i>, juste derrière L.I.M, dont le poulain, Mister You, se classe à la troisième marche de notre podium des top <i>“niqueurs”</i>. 
  </p>
        </div>
        <div class="lead col-10 text-muted">
