--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="intro-text">
               <div class="intro-lead-in">Data investigation</div>
               <div class="intro-heading text-uppercase">Que disent les rappeurs francophones dans leurs chansons ?</div>
-              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp1.html">Rap et police</a>
+              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp1.html">“Sacrifice de poulets”</a>
               <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp2.html">Que nique-t-on<br>dans le rap ?</a>
               <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Groupe 3</a>
             </div>
