--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
           <div class="container">
             <div class="intro-text">
               <div class="intro-lead-in">Data investigation</div>
-              <div class="intro-heading text-uppercase">Que disent les rappeurs francophones dans leurs chansons ?</div>
-              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp1.html">“Sacrifice de poulets”</a>
-              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp2.html">Que nique-t-on<br>dans le rap ?</a>
-              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Groupe 3</a>
+              <div class="intro-heading text-uppercase"> Quand le rap boxe avec les mots</div>
+              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp1.html">“Sacrifice de poulets”<br>entre provoc'<br>et dénonciation</a>
+              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp2.html">Que <br>nique-t-on<br>dans le rap ?</a>
+              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp3.html">Groupe 3</a>
             </div>
           </div>
         </header>
@@ -54,26 +54,34 @@
                 <div class="row">
                   <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">Comment avons-nous travaillé ?</h2>
-                    <h3 class="section-subheading text-muted">Nous avons été encadré par le journaliste de France Info Nicolas Enault.</h3>
+                    <h3 class="section-subheading text-muted">Nous avons été encadré par le journaliste de franceinfo.fr Nicolas Enault.</h3>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                       <i class="fas fa-circle fa-stack-2x text-primary"></i>
                       <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading text-center">Notre méthodologie</h4>
-                    <p class="text-muted">Pour travailler, nous avons fait une liste de rappeurs francophones en partant de nos connaissances respectives et de listes existantes en ligne comme celle du site <a href="https://www.senscritique.com/liste/Les_meilleurs_rappeurs_francais/1266999">Sens critique</a>, ce qui donnait 425 rappeurs. Une fois cette liste établie, nous avons aspiré 14.217 chansons, de 313 artistes : ceux dont nous pouvions récupérer les paroles. Sans les doublons, la base contient 12.956 chansons et 1.058 combinaisons possibles d'artistes, en solo ou à plusieurs. Nos deux sources sont les sites <a href="https://paroles2chansons.lemonde.fr/">paroles2chansons</a> et <a href="http://www.parolesmania.com/">parolesmania</a>.</p>
+                    <p class="text-muted">Pour travailler, nous avons fait une liste de rappeurs francophones en partant de nos connaissances respectives et de listes existantes en ligne comme celle du site <a href="https://www.senscritique.com/liste/Les_meilleurs_rappeurs_francais/1266999">Sens critique</a>, ce qui donnait 425 rappeurs. Une fois cette liste établie, nous avons aspiré 14.217 chansons, de 313 artistes : ceux dont nous pouvions récupérer les paroles. Sans les doublons, la base contient 12.956 chansons et 1.058 combinaisons possibles d'artistes, en solo ou à plusieurs.</p>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                       <i class="fas fa-circle fa-stack-2x text-primary"></i>
                       <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading text-center">Notre corpus</h4>
-                    <p class="text-muted">Les dates s'étendent de 1990 à 2018, avec seulement deux chansons en 1990 et 1.168 titres en 2018. L'année qui compte le plus de chansons est 2017 avec 1.410 chansons. En moyenne, nous avons 303 chansons par an sur toute la période observée, et dans le détail : 42 chansons par an en moyenne sur la période 1990-1999, 164 chansons par an en moyenne sur la période 2000-2009 et 718 chansons par an en moyenne entre 2010 et 2018. L'artiste qui a le plus de chansons référencées est Jul, avec 415 chansons solo et 28 chansons en featuring. Seuls 41 artistes ont plus de 100 chansons référencées (en solo et en featuring), 84 artistes ont moins de 10 chansons référencées (en solo et en featuring). 18 artistes n'ont qu'une seule chanson référencées (en solo et en featuring).</p>
+                    <p class="text-muted">Nos deux sources sont les sites <a href="https://paroles2chansons.lemonde.fr/">paroles2chansons</a> et <a href="http://www.parolesmania.com/">parolesmania</a>. Les dates s'étendent de 1990 à 2018, avec seulement deux chansons en 1990 et 1.168 titres en 2018. L'année qui compte le plus de chansons est 2017 avec 1.410 chansons. En moyenne, nous avons 303 chansons par an sur toute la période observée, et dans le détail : 42 chansons par an en moyenne sur la période 1990-1999, 164 chansons par an en moyenne sur la période 2000-2009 et 718 chansons par an en moyenne entre 2010 et 2018. </p>
                   </div>
+                  <div class="col-md-4">
+                      <span class="fa-stack fa-4x">
+                        <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                      </span>
+                      <h4 class="service-heading text-center">Nos artistes</h4>
+                      <p class="text-muted">L'artiste qui a le plus de chansons référencées est Jul, avec 415 chansons solo et 28 chansons en featuring. Seuls 41 artistes ont plus de 100 chansons référencées (en solo et en featuring), 84 artistes ont moins de 10 chansons référencées (en solo et en featuring). 18 artistes n'ont qu'une seule chanson référencées (en solo et en featuring).</p>
+                    </div>
                 </div>
               </div>
             </section>
