--- a/grp3.html
+++ b/grp3.html
@@ -15,7 +15,7 @@
 .background {
    background-color: rgba(176, 176, 176, 0.33);;
    background-position: center;
-   background-image: url(Marianne.jpg);
+   background-image: url(static/img/Marianne.jpg);
    background-repeat: no-repeat;
    background-size: 50%;
    width: 100%;
@@ -28,10 +28,23 @@
        margin-right: auto; /* Automatic margin from right */
       } 
 </style>
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="navbar">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="grp2.html">Que nique-t-on dans le rap ?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="grp1.html">Sacrifice de poulets” : entre provoc' et dénonciation</a>
+            </li>
+          </ul>
+        </nav>
 <header>
  <div class="background"></div>
- <h1 class="jumbotron-heading text-center"><font color=#bb4243>ENGAGEMENT ET MOQUERIE</font></h1>
- <p class="lead jumbotron-subheading text-center"><strong><font color=#3e70b2>LA POLITIQUE DANS LE RAP</strong></p>
+ <h1 class="jumbotron-heading text-center">ENGAGEMENT ET MOQUERIE</h1>
+ <p class="lead jumbotron-subheading text-center"><strong>LA POLITIQUE DANS LE RAP</strong></p>
 </header>
 
 
@@ -120,10 +133,10 @@
     
      <p>“Il suffit de regarder les paroles de la chanson Marion Machéral du rappeur Sofiane, sortie en 2017” détaille Brice Bossavie. “Le titre fait directement référence à la députée et reprend son nom à maintes reprises dans le corps de la chanson. Pourtant, il n’est pas question du projet politique ou des idées de Marion Maréchal Le Pen. Cela semble juste amuser le rappeur de citer son nom et de faire croire qu’il est en couple avec elle.”  </p>
 
-      <img src="capture.png" height="900" width="600">
+      <img src="static/img/capture.png" height="900" width="600">
      <p>Même canular de la déclaration de flamme avec la chanson “Rama Yade” signée Don Choa et sortie en 2010. Dans ce morceau aux rythmes RnB et reggae, l'un des quatre MCs du groupe de rap marseillais Fonky Family parle de l’ancienne membre du gouvernement de François Fillon en termes élogieux (et ironiques).</p>
     <p>Paroles de "Rama Yade", par Don Choa</p>
-    <img src="capture2.png" height="900" width="600">
+    <img src="static/img/capture2.png" height="900" width="600">
      <p>L’amusement des frasques, pour sa part, est notamment visible à travers la chanson “Patrick”, signée Grands Corps Malade. Sur ce titre, le rappeur fait un hommage plus que ironique au maire de Levallois-Perret, Patrick Balkany. Parmi les phrases faisant référence aux poursuites judiciaires du maire, on peut notamment relever celle-ci : “T’as sur le dos et sur les bras, plus de mises en examen que ton ami Nicolas”.</p>
 
 
@@ -131,7 +144,7 @@
 
 <h2><p>Une référence incontournable : Barack Obama</p></h2>
 
-<img src="obama.png" height="400" width="800">
+<img src="static/img/obama.png" height="400" width="800">
 
 <p>Après 2005, on constate un désintéressement croissant des rappeurs français pour la politique nationale au profit de sujets internationaux et post-coloniaux. Les artistes français portent un vif intérêt en la personne de Barack Obama, qui se fait connaître dès 2008 dans sa course vers la Maison-Blanche. Ce dernier devient une référence incontournable dans les chansons des artistes de hip-hop français, qui n’hésitent pas à citer son nom comme élément de comparaison pour évoquer divers sujets comme le racisme, la politique internationale et les sujets liés à l’Afrique.</p>
 
