--- a/grp1.html
+++ b/grp1.html
@@ -22,7 +22,7 @@
               <a class="nav-link" href="grp2.html">Que nique-t-on dans le rap ?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="grp3.html">Groupe 3</a>
+              <a class="nav-link" href="grp3.html">La politique dans le rap</a>
             </li>
           </ul>
         </nav>
