--- a/grp2.html
+++ b/grp2.html
@@ -10,6 +10,19 @@
  <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 <body>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="navbar">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Accueil</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="grp1.html">"Sacrifice de poulets" : entre provoc' et dénonciation</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="grp3.html">La politique dans le rap</a>
+                  </li>
+                </ul>
+              </nav>
 <header class="jumbotron text-center">
  <div class="container">
    <h1 class="jumbotron-heading">Que nique-t-on dans le rap ?</h1>
