--- a/grp3.html
+++ b/grp3.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="grp2.html">Que nique-t-on dans le rap ?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="grp1.html">Sacrifice de poulets” : entre provoc' et dénonciation</a>
+              <a class="nav-link" href="grp1.html">"Sacrifice de poulets" : entre provoc' et dénonciation</a>
             </li>
           </ul>
         </nav>
