--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <div class="intro-heading text-uppercase"> Quand le rap boxe avec les mots</div>
               <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp1.html">“Sacrifice de poulets”<br>entre provoc'<br>et dénonciation</a>
               <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp2.html">Que <br>nique-t-on<br>dans le rap ?</a>
-              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp3.html">Groupe 3</a>
+              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="grp3.html">Engagement<br> et moquerie :<br>La politique dans le rap</a>
             </div>
           </div>
         </header>
