--- a/grp3.html
+++ b/grp3.html
@@ -52,15 +52,15 @@
 <section class="container" id="intro">
  <div class="row justify-content-md-center textintro">
      <div class="lead col-10 text-muted">
-       <p>Il y a plus de 20 ans, ce rappeur sortait « Première Consultation », l'un des albums les plus vendus du rap français. Avant de connaître une longue traversée du désert pour avoir apporté son soutien à Nicolas Sarkozy lors de la campagne présidentielle de 2007. Sa « plus grande erreur », comme il l’avoue aujourd’hui.. </p>
+       <p>Il y a plus de 20 ans, ce rappeur sortait « Première Consultation », l'un des albums les plus vendus du rap français. Avant de connaître une longue traversée du désert pour avoir apporté son soutien à Nicolas Sarkozy lors de la campagne présidentielle de 2007. Sa <i>« plus grande erreur »</i>, comme il l’avoue aujourd’hui. </p>
      </div>
  </div>
  <div class="row justify-content-md-center textintro">
    <div class="lead col-10 text-muted">
-     <p> Doc Gynéco fait figure d’exception, les rappeurs appelant généralement à voter non pas pour un homme ou une femme politique, mais contre, ne se retrouvant pas dans un programme ou une vision du monde. Ainsi, au lendemain du 21 avril 2002, alors que Jean-Marie Le Pen est qualifié au second tour de la présidentielle, des rappeurs se rassemblent pour un morceau collectif. Le but: inciter les jeunes à voter et faire barrage au parti d'extrême droite (« La lutte est en marche »). </p>
+     <p> Doc Gynéco fait figure d’exception, les rappeurs appelant généralement à voter non pas pour un homme ou une femme politique, mais contre, ne se retrouvant pas dans un programme ou une vision du monde. Ainsi, au lendemain du 21 avril 2002, alors que Jean-Marie Le Pen est qualifié au second tour de la présidentielle, des rappeurs se rassemblent pour un morceau collectif. Le but : inciter les jeunes à voter et faire barrage au parti d'extrême droite (« La lutte est en marche »). </p>
    </div>
     <div class="lead col-10 text-muted">
-     <p>La relation entre le rap et la politique apparaît comme conflictuelle. Ségolène Royal fait aussi figure d’exception lorsque, candidate à la présidentielle de 2007, elle cite Kery James dans son discours de Villepinte. Du côté des politiques, les attaques contre les rappeurs sont en effet nombreuses. Récemment, le rappeur Médine a été désigné persona non grata au Bataclan par la droite et l’extrême droite, ayant jugé ses textes ambigus sur l’islamisme et la laïcité. Suite à cette polémique, Karim Madani, journaliste musical spécialisé dans le rap, décrit la relation entre le rap et la politique comme « un mauvais mélange, comme le lait et la vodka » (Le Parisien, 11 juin 2018). Comme si le dialogue était impossible entre le rap et les élites politiques.
+     <p>La relation entre le rap et la politique apparaît comme conflictuelle. Ségolène Royal fait aussi figure d’exception lorsque, candidate à la présidentielle de 2007, elle cite Kery James dans son discours de Villepinte. Du côté des politiques, les attaques contre les rappeurs sont en effet nombreuses. Récemment, le rappeur Médine a été désigné persona non grata au Bataclan par la droite et l’extrême droite, ayant jugé ses textes ambigus sur l’islamisme et la laïcité. Suite à cette polémique, Karim Madani, journaliste musical spécialisé dans le rap, décrit la relation entre le rap et la politique comme <i>«« un mauvais mélange, comme le lait et la vodka »</i>« (Le Parisien, 11 juin 2018). Comme si le dialogue était impossible entre le rap et les élites politiques.
      </p>
    </div>
 </div>
