--- a/grp3.html
+++ b/grp3.html
@@ -77,7 +77,7 @@
         <iframe class="iframe" src="https://datawrapper.dwcdn.net/B6JhL/4/" scrolling="no" frameborder="0" width="600" height="1530" align="middle"></iframe>
          
 
-           <div class="text-muted subtitlegraph">Méthodologie : une chanson est comptabilisée si elle contient au moins un des mots de la base indiquée précédemment, les mots au pluriel étant rattachés à leur racine au singulier sauf "perdreaux" et "poulets". Les métaphores ne sont donc pas prises en compte. </div>     
+           <div class="text-muted subtitlegraph">Méthodologie : nous avons établi une liste des 100 personnalités les plus médiatiques. Pour chacune, nous avons regardé combien de chansons faisaient mention de leurs noms dans les paroles. Dans le cas de la famille Le Pen, comme les prénoms n'étaient pas forcément indiqués, nous n'avons gardé que le nom de famille. </div>     
 
 
            
