--- a/grp3.html
+++ b/grp3.html
@@ -87,10 +87,10 @@
 
 
 <br>
-         <p>Comme nous pouvons le voir, ceux qui sont les plus cités sont les plus connus, (les 12 premiers, de Nicolas sarkozy à François Mitterrand). Selon le rappeur et sociologue Sylvain Helmé Lemay, qui a réalisé en 2016 une analyse des messages dans le rap francophone du Québec: “Les personnalités politiques fortement médiatisées risquent d’être citées beaucoup plus souvent que les autres."</p>
+         <p>Comme nous pouvons le voir, ceux qui sont les plus cités sont les plus connus, (les 12 premiers, de Nicolas sarkozy à François Mitterrand). Selon le rappeur et sociologue Sylvain Helmé Lemay, qui a réalisé en 2016 une analyse des messages dans le rap francophone du Québec: <i>« Les personnalités politiques fortement médiatisées risquent d’être citées beaucoup plus souvent que les autres. »</i>
 
 
-         <p>En revanche, ceux qui sont le plus cités par la suite sont en grande majorité à droite ou extrême droite (de François Fillon à Philippe Pétain) : sur les 10 personnes citées, 7 sont classées à droite ou à l’extrême droite. 6 d’entre elles ont été membres de l’UMP, et ont occupé des ministères durant les mandats de Jacques Chirac ou de Nicolas Sarkozy. Selon Sylvain Heké Lemay: “Une grande partie des rappeurs qui se prononcent sur la politique le font pour la critiquer et pour dénoncer le pouvoir en place. Ils critiquent souvent le « système » de façon globale, mais dans les faits leurs critiques sont directement orientés envers le régime politique en place.”</p>
+         <p>En revanche, ceux qui sont le plus cités par la suite sont en grande majorité à droite ou extrême droite (de François Fillon à Philippe Pétain) : sur les 10 personnes citées, 7 sont classées à droite ou à l’extrême droite. 6 d’entre elles ont été membres de l’UMP, et ont occupé des ministères durant les mandats de Jacques Chirac ou de Nicolas Sarkozy. Selon Sylvain Helmé Lemay: <i>« Une grande partie des rappeurs qui se prononcent sur la politique le font pour la critiquer et pour dénoncer le pouvoir en place. Ils critiquent souvent le « système » de façon globale, mais dans les faits leurs critiques sont directement orientés envers le régime politique en place. »</i></p>
 
          <p>Nous allons donc particulièrement nous intéresser aux thèmes et aux personnalités politiques qui reviennent dans les chansons de rap français, pour mieux comprendre les relations entre ce genre musical et la politique. Nous allons voir que l’année 2005 constitue un tournant, l’engagement politique laissant place à la satire.</p>
 
