--- a/grp2.html
+++ b/grp2.html
@@ -38,13 +38,14 @@
  </div>
  <div class="row justify-content-md-center textintro">
    <div class="lead col-10 text-muted">
-     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”</i>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression <i>“niquer”</i> (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur <a href="https://www.youtube.com/watch?v=2DEg5Bn0hUs">L.I.M</a> arrive en tête du classement avec une moyenne de 45,07 fois l’expression <i>“nique”</i> dans sa discographie. 
+     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”</i>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression <i>“niquer”</i> (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur <a href="https://www.youtube.com/watch?v=2DEg5Bn0hUs">L.I.M</a> arrive en tête du classement puisqu’il utilise au moins une fois l’expression <i>“nique”</i> dans 45% de ses morceaux. Voici notre top 20 des rappeurs <i>“niqueurs”</i>
 </p>
+<div class="flourish-embed" data-src="visualisation/166573"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 <div class="flourish-embed" data-src="visualisation/166517"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
    </div>
     <div class="lead col-10 text-muted">
 <h2 class="ca-heading-sub title"><bold>Des mères…. mais pas que</bold></h2>
-     <p> Et devinez ce que niquent nos esthètes? Des mères, des mères, et encore des mères, à l’image de Kalash Criminel: 682 fois selon nos calculs ce qui représente un quart ! Fait étonnant, le groupe NTM (Nique Ta Mère) n’est pas celui qui nique le plus des mères. Pour harmoniser notre base de données, nous avons réuni dans le groupe lexical <i>“mère”</i> des synonymes en argot comme <i>“reum”</i>, <i>“reu-mè”</i>. </p>
+     <p> Et devinez ce que niquent nos esthètes? Des mères, des mères, et encore des mères, à l’image de Kalash Criminel: 682 fois selon nos calculs ce qui représente un quart des <i>“choses niquées”</i>! Fait étonnant, le groupe NTM (Nique Ta Mère) n’est pas celui qui nique le plus des mères. Pour harmoniser notre base de données, nous avons réuni dans le groupe lexical <i>“mère”</i> des synonymes en argot comme <i>“reum”</i>, <i>“reu-mè”</i>. </p>
    </div>
 </div>
  </section>
@@ -93,3 +94,5 @@
 </section>
 </body>
 </html>
+
+
