--- a/grp3.html
+++ b/grp3.html
@@ -92,7 +92,7 @@
 
          <p>En revanche, ceux qui sont le plus cités par la suite sont en grande majorité à droite ou extrême droite (de François Fillon à Philippe Pétain) : sur les 10 personnes citées, 7 sont classées à droite ou à l’extrême droite. 6 d’entre elles ont été membres de l’UMP, et ont occupé des ministères durant les mandats de Jacques Chirac ou de Nicolas Sarkozy. Selon Sylvain Helmé Lemay: <i>« Une grande partie des rappeurs qui se prononcent sur la politique le font pour la critiquer et pour dénoncer le pouvoir en place. Ils critiquent souvent le « système » de façon globale, mais dans les faits leurs critiques sont directement orientés envers le régime politique en place. »</i></p>
 
-         <p>Nous allons donc particulièrement nous intéresser aux thèmes et aux personnalités politiques qui reviennent dans les chansons de rap français, pour mieux comprendre les relations entre ce genre musical et la politique. Nous allons voir que l’année 2005 constitue un tournant, l’engagement politique laissant place à la satire.</p>
+         <p>Nous allons donc particulièrement nous intéresser aux thèmes et aux personnalités politiques qui reviennent dans les chansons de rap français, pour mieux comprendre les relations entre ce genre musical et la politique. Nous allons voir que l’année 2005 constitue un tournant, l’engagement politique laissant place à la moquerie.</p>
 
          <div class="flourish-embed" data-src="visualisation/166836"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 
