--- a/grp2.html
+++ b/grp2.html
@@ -38,7 +38,7 @@
  </div>
  <div class="row justify-content-md-center textintro">
    <div class="lead col-10 text-muted">
-     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”</i>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression <i>“niquer”</i> (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur <a href="https://www.youtube.com/watch?v=2DEg5Bn0hUs">L.I.M</a> arrive en tête du classement puisqu’il utilise au moins une fois l’expression <i>“nique”</i> dans 45% de ses morceaux. Voici notre top 20 des rappeurs <i>“niqueurs”</i>
+     <p>Comme Kalash, ils sont nombreux dans le rap à <i>“niquer”</i>. Nous nous sommes demandés quelles étaient les personnes niquées par ces MCs. Sur une base de 12 956  morceaux, interprétés par 313 rappeurs francophones de 1990 à 2018, auteurs d’au moins 50 titres, 1664 titres incluent l’expression <i>“niquer”</i> (déclinaisons conjuguées incluses), soit 12,8% de notre base de données. Le rappeur <a href="https://www.youtube.com/watch?v=2DEg5Bn0hUs">L.I.M</a> arrive en tête du classement puisqu’il utilise au moins une fois l’expression <i>“nique”</i> dans 45% de ses morceaux. <bold>Voici notre top 20 des rappeurs <i>“niqueurs”</i>:<bold/>
 </p>
 <div class="flourish-embed" data-src="visualisation/166573"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 <div class="flourish-embed" data-src="visualisation/166517"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
