--- a/grp3.html
+++ b/grp3.html
@@ -96,13 +96,13 @@
 
          <div class="flourish-embed" data-src="visualisation/166836"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 
-         <h2><p>Le tournant 2005 : quand les artistes sont passés de l’engagement politique à la moquerie.</h2></p>
+         <h1><p>Le tournant 2005 : quand les artistes sont passés de l’engagement politique à la moquerie.</h1></p>
 
 
          <p>Comme nous l’avons vu, de la fin des années 1990 jusqu’à l’aube du 21ème siècle, de nombreuses chansons de rap ont véhiculé des messages politiques ou été empreintes d’une allusion à une personnalité politique.</p>
 
 
-         <p>Toutefois, comme le souligne Brice Bossavie, journaliste spécialisé dans le rap, “il y a eu un tournant autour de l’année 2005 pour ce qui est de l’engagement des rappeurs et de leur intérêt même pour la politique”.</p>
+         <p>Toutefois, comme le souligne Brice Bossavie, journaliste spécialisé dans le rap, <i>« il y a eu un tournant autour de l’année 2005 pour ce qui est de l’engagement des rappeurs et de leur intérêt même pour la politique »</i>.</p>
 
 
        </div>
@@ -114,11 +114,11 @@
 
 
 
-         <p>Les déclarations polémiques ou les petites phrases, à l’instar de celle de Nicolas Sarkozy promettant de “nettoyer la cité au karcher” deviennent alors la matière principale des rappeurs qui parlent de politique. Les idées ou le projet politique en soi ne sont plus ce qui est utilisé. 
+         <p>Les déclarations polémiques ou les petites phrases, à l’instar de celle de Nicolas Sarkozy promettant de <i>« nettoyer la cité au karcher »</i> deviennent alors la matière principale des rappeurs qui parlent de politique. Les idées ou le projet politique en soi ne sont plus ce qui est utilisé. 
          </p>
 
 
-         <p>Autre matière des rappeurs, selon Brice Bossavie : les déboires des personnalités politiques et les affaires les impliquant, en particulier lorsqu’elles revêtent un aspect financier. “Les affaires Cahuzac et DSK, par exemple, semblent faire rire la majorité des artistes dans le rap” analyse-t-il. Avant de poursuivre : “avec le temps, on assiste même à des retournements étonnants. Les personnalités n’intéressent plus vraiment pour ce qu’elles sont, ce qui amuse désormais les chanteurs c’est si elles ont un culte de l’argent. Il suffit de regarder l’évolution de l’image de Nicolas Sarkozy : alors qu’il était détesté au début des années 2000, il est désormais cité par de nombreux rappeurs comme une référence pour ses qualités de businessman.” 
+         <p>Autre matière des rappeurs, selon Brice Bossavie : les déboires des personnalités politiques et les affaires les impliquant, en particulier lorsqu’elles revêtent un aspect financier. <i>« Les affaires Cahuzac et DSK, par exemple, semblent faire rire la majorité des artistes dans le rap »</i> analyse-t-il. Avant de poursuivre : <i>« avec le temps, on assiste même à des retournements étonnants. Les personnalités n’intéressent plus vraiment pour ce qu’elles sont, ce qui amuse désormais les chanteurs c’est si elles ont un culte de l’argent. Il suffit de regarder l’évolution de l’image de Nicolas Sarkozy : alors qu’il était détesté au début des années 2000, il est désormais cité par de nombreux rappeurs comme une référence pour ses qualités de businessman. »</i> 
          </p>
        </div>
    </div>
