--- a/grp3.html
+++ b/grp3.html
@@ -131,13 +131,13 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/GgCYHmkWzIs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 
     
-     <p><i>« Il suffit de regarder les paroles de la chanson Marion Machéral du rappeur Sofiane, sortie en 2017 »</i> détaille Brice Bossavie. <i>« Le titre fait directement référence à la députée et reprend son nom à maintes reprises dans le corps de la chanson. Pourtant, il n’est pas question du projet politique ou des idées de Marion Maréchal Le Pen. Cela semble juste amuser le rappeur de citer son nom et de faire croire qu’il est en couple avec elle »</i> </p>
+     <p><i>« Il suffit de regarder les paroles de la chanson Marion Machéral du rappeur Sofiane, sortie en 2017 »</i> détaille Brice Bossavie. <i>« Le titre fait directement référence à la députée et reprend son nom à maintes reprises dans le corps de la chanson. Pourtant, il n’est pas question du projet politique ou des idées de Marion Maréchal Le Pen. Cela semble juste amuser le rappeur de citer son nom et de faire croire qu’il est en couple avec elle. »</i> </p>
 
       <img src="static/img/capture.png" height="900" width="600">
-     <p>Même canular de la déclaration de flamme avec la chanson “Rama Yade” signée Don Choa et sortie en 2010. Dans ce morceau aux rythmes RnB et reggae, l'un des quatre MCs du groupe de rap marseillais Fonky Family parle de l’ancienne membre du gouvernement de François Fillon en termes élogieux (et ironiques).</p>
-    <p>Paroles de "Rama Yade", par Don Choa</p>
+     <p>Même canular de la déclaration de flamme avec la chanson « Rama Yade » signée Don Choa et sortie en 2010. Dans ce morceau aux rythmes RnB et reggae, l'un des quatre MCs du groupe de rap marseillais Fonky Family parle de l’ancienne membre du gouvernement de François Fillon en termes élogieux (et ironiques).</p>
+    <p>Paroles de « Rama Yade », par Don Choa</p>
     <img src="static/img/capture2.png" height="900" width="600">
-     <p>L’amusement des frasques, pour sa part, est notamment visible à travers la chanson “Patrick”, signée Grands Corps Malade. Sur ce titre, le rappeur fait un hommage plus que ironique au maire de Levallois-Perret, Patrick Balkany. Parmi les phrases faisant référence aux poursuites judiciaires du maire, on peut notamment relever celle-ci : “T’as sur le dos et sur les bras, plus de mises en examen que ton ami Nicolas”.</p>
+     <p>L’amusement des frasques, pour sa part, est notamment visible à travers la chanson « Patrick », signée Grands Corps Malade. Sur ce titre, le rappeur fait un hommage plus que ironique au maire de Levallois-Perret, Patrick Balkany. Parmi les phrases faisant référence aux poursuites judiciaires du maire, on peut notamment relever celle-ci : <i>« T’as sur le dos et sur les bras, plus de mises en examen que ton ami Nicolas. »</i></p>
 
 
       <h2><p>L’après 2005 et le désintéressement croissant pour la politique nationale au profit de sujets internationaux et post-coloniaux</h2></p>
