--- a/grp3.html
+++ b/grp3.html
@@ -140,9 +140,9 @@
      <p>L’amusement des frasques, pour sa part, est notamment visible à travers la chanson « Patrick », signée Grands Corps Malade. Sur ce titre, le rappeur fait un hommage plus que ironique au maire de Levallois-Perret, Patrick Balkany. Parmi les phrases faisant référence aux poursuites judiciaires du maire, on peut notamment relever celle-ci : <i>« T’as sur le dos et sur les bras, plus de mises en examen que ton ami Nicolas. »</i></p>
 
 
-      <h2><p>L’après 2005 et le désintéressement croissant pour la politique nationale au profit de sujets internationaux et post-coloniaux</h2></p>
+      <h1><p>L’après 2005 et le désintéressement croissant pour la politique nationale au profit de sujets internationaux et post-coloniaux</h1></p>
 
-<h2><p>Une référence incontournable : Barack Obama</p></h2>
+<h2><p>-Une référence incontournable : Barack Obama</p></h2>
 
 <img src="static/img/obama.png" height="400" width="800">
 
