--- a/grp3.html
+++ b/grp3.html
@@ -147,6 +147,8 @@
 
 <img src="static/img/obama.png" height="400" width="800">
 
+ <div class="text-muted subtitlegraph">Méthodologie : Nuage de mots des 84 chansons qui citent Barack Obama. Seuls les paragraphes où il est question de l’ex-président américain ont été analysés, pour voir les notions qui lui sont associées.</div>
+
 <p>Après 2005, on constate un désintéressement croissant des rappeurs français pour la politique nationale au profit de sujets internationaux et post-coloniaux. Les artistes français portent un vif intérêt en la personne de Barack Obama, qui se fait connaître dès 2008 dans sa course vers la Maison-Blanche. Ce dernier devient une référence incontournable dans les chansons des artistes de hip-hop français, qui n’hésitent pas à citer son nom comme élément de comparaison pour évoquer divers sujets comme le racisme, la politique internationale et les sujets liés à l’Afrique.</p>
 
 
